# binpickle

./: .copier-answers.yml  .gitignore  .header.yaml  .readthedocs.yml  .toplo.toml  LICENSE  LICENSE.md  README.md  codecov.yml  conftest.py  constraints.txt  environment.yml  envtool.py  pyproject.toml  setup.cfg
.github/workflows/: check-sources.yml  conda.yml  draft-release.yml  package.yml  test.yml
binpickle/: __init__.py  __main__.py  _cli.py  _util.py  compat.py  encode.py  errors.py  format.py  read.py  repickle.py  write.py
binpickle/codecs/: __init__.py  _base.py  blosc.py  chain.py  gz.py  null.py  numcodecs.py
conda/: check-pickle5.ps1  meta.yaml
conda/binpickle/: conda_build_config.yaml  meta.yaml
docs/: codecs.rst  conf.py  format.rst  index.rst  read.rst  write.rst
docs/_templates/: base.html  footer.html
lkbuild/: tasks.py
stubs/numcodecs/: __init__.pyi  abc.pyi  registry.pyi
tests/: test_cli.py  test_codecs.py  test_compat.py  test_file_info.py  test_format.py  test_integrity.py  test_repickle.py  test_rw.py  test_util.py  test_validation.py  utils.py
typings/numcodecs/: __init__.pyi  abc.pyi  registry.pyi
