[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "binpickle"
authors = [
  {name="Michael Ekstrand", email="mdekstrand@drexel.edu"}
]
classifiers = [
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Operating System :: OS Independent",
]
requires-python = ">= 3.10"
readme = "README.md"
dynamic = ["version", "description"]
dependencies = [
  "msgpack >= 1.0",
]

[project.optional-dependencies]
dev = [
  "flit >=3.8",
  "ruff",
  "copier",
]
test = [
  "pytest >= 5",
  "pytest-cov",
  "hypothesis >= 6",
  "pandas >= 1.0",
  "numpy >= 1.17",
]
doc = [
  "sphinx >=4",
  "furo",
]

[project.urls]
Homepage = "https://binpickle.lenksit.org"
GitHub = "https://github.com/lenskit/binpickle"

# configure build tools
[tool.flit.sdist]
include = ["tests/*"]
exclude = [
  ".github"
]

# need this for the SCM plugins to work
[tool.setuptools.packages.find]
exclude = ["envs"]

# settings for generating conda environments for dev & CI, when needed
[tool.pyproject2conda]
channels = ["conda-forge"]

[tool.ruff]
line-length = 100
target-version = "py310"
exclude = [
  ".git",
  "__pycache__",
  "docs/conf.py",
  "build",
  "dist",
]
