[build-system]
requires = ["setuptools>=64", "setuptools_scm>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "binpickle"
description = "Optimized format for pickling binary data."
authors = [
  { name = "Michael Ekstrand", email = "mdekstrand@drexel.edu" },
]
classifiers = [
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Operating System :: OS Independent",
]
requires-python = ">= 3.10"
readme = "README.md"
license = { file = "LICENSE.md" }
dynamic = ["version"]
dependencies = [
  "msgpack >= 1.0",           # p2c: -s msgpack-python
  "numcodecs >= 0.12",
  "typing-extensions ~= 4.8",
]

[project.optional-dependencies]
dev = [
  "setuptools>=64",
  "setuptools_scm>=8",
  "build",
  "twine",
  "ruff",
  "pyright",
  "copier",
  "unbeheader",         # p2c: -p
  "ipython",
  "pyproject2conda",
  "sphinx-autobuild",
  "humanize ~=4.0",
  "msgpack-types",     # p2c: -p
  "pandas-stubs",
]
test = [
  "pytest >= 5",
  "pytest-cov",
  "hypothesis >= 6",
  "pandas >= 1.4",
  "numpy >= 1.22",
]
doc = [
  "sphinx >=4.2",
  "sphinxext-opengraph >= 0.5",
  "furo",
]

[project.urls]
Homepage = "https://binpickle.lenksit.org"
GitHub = "https://github.com/lenskit/binpickle"

# configure build tools
[tool.setuptools]
packages = ["binpickle"]

[tool.setuptools_scm]
version_scheme = "guess-next-dev"

# settings for generating conda environments for dev & CI, when needed
[tool.pyproject2conda]
channels = ["conda-forge"]

[tool.ruff]
line-length = 100
target-version = "py310"
select = ["E", "F", "I"]
exclude = [
  ".git",
  "__pycache__",
  "docs/conf.py",
  "build",
  "dist",
]

[tool.ruff.lint.isort]
section-order = [
  "future",
  "standard-library",
  "third-party",
  "testing",
  "first-party",
  "local-folder",
]

[tool.ruff.lint.isort.sections]
testing = ["pytest", "hypothesis"]

[tool.mypy]
exclude = "^docs/"

[tool.pyright]
typeCheckingMode = "strict"
exclude = [
  "docs/*",
]
reportUnnecessaryIsInstance = false
reportMissingImports = true
reportMissingTypeStubs = false
