[metadata]
name = binpickle
url = https://binpickle.lenskit.org
author = Michael Ekstrand
author_email = michaelekstrand@boisestate.edu
version = attr: binpickle.__version__
description = Efficient binary storage of ML models
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT License
license_file = LICENSE
classifiers =
    License :: OSI Approved :: MIT License

[options]
zip_safe = True
packages = find:
install_requires =
    msgpack >= 1.0
    pickle5; python_version < "3.8"

[options.extras_require]
blosc =
    blosc
dev =
    flake8
    rstcheck
    twine
doc = sphinx
test =
    pytest
    pytest-cov
    hypothesis
    pandas >= 1.0
    numpy >= 1.17

[flake8]
max-line-length = 100
exclude =
    .git
    __pycache__
    docs/conf.py
    build
    dist
    tests
